2009-10-13  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Darin Adler.

        ARM compiler does not understand reinterpret_cast<void*>
        https://bugs.webkit.org/show_bug.cgi?id=29034

        Change reinterpret_cast<void*> to regular C style (void*) cast
        for the ARM RVCT compiler.

        * assembler/MacroAssemblerCodeRef.h:
        (JSC::FunctionPtr::FunctionPtr):
        * jit/JITOpcodes.cpp: Cast to FunctionPtr first
           instead of directly casting to reinterpret_cast
        * jit/JITStubCall.h: Ditto + change the type of m_stub
          from void* to FunctionPtr.
        (JSC::JITStubCall::JITStubCall):
        (JSC::JITStubCall::call):
        * jit/JITStubs.cpp: Ditto.
        (JSC::DEFINE_STUB_FUNCTION(EncodedJSValue, op_throw)):



Canonical link: https://commits.webkit.org/41002@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49509 268f45cc-cd09-0410-ab3c-d52691b4dbfc